--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,13 @@ dependencies:
   image_picker: ^0.5.0+9
   #转场动画
   page_transition: ^1.0.9
+  #webview
+  flutter_webview_plugin: ^0.3.3
+  #toast
+  fluttertoast: ^3.0.3
+  #sp存储
+  shared_preferences: ^0.5.2
+
 
 dev_dependencies:
   flutter_test:
