--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   shared_preferences: ^0.5.2
   #dialog
   progress_dialog: ^1.0.7
+  flt_toast:
+    path: ./flt_toast
 
 
 
@@ -36,6 +38,7 @@ flutter:
   uses-material-design: true
   assets:
   - assets/images/
+
 
 # fonts:
 #   - family: Schyler
