--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,12 @@ dependencies:
   shared_preferences: ^0.5.2
   #dialog
   progress_dialog: ^1.0.7
+  #二维码扫描
+  barcode_scan: ^1.0.0
+  #传感器
+  aeyrium_sensor: ^1.0.5
+  #eventbus
+  event_bus: ^1.1.0
   flt_toast:
     path: ./flt_toast
 
