--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.aliyun.com/repository/google' }
     }
 
     dependencies {
@@ -13,6 +14,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.aliyun.com/repository/google' }
     }
 }
 
