--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   share_extend: ^1.0.8
   #视屏
   video_player: ^0.10.0+5
-  # html 格式显示
+  zoomable_image: ^1.3.1
 
   fish_redux: ^0.1.4
 
