--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   #视屏
   video_player: ^0.10.0+5
   zoomable_image: ^1.3.1
-
+  flutter_widget_from_html: ^0.1.5
   fish_redux: ^0.1.4
 
   flt_toast:
